--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: ssukhija <ssukhija@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/04/24 10:55:50 by ssukhija          #+#    #+#              #
-#    Updated: 2025/07/29 13:16:25 by ssukhija         ###   ########.fr        #
+#    Updated: 2025/10/16 23:44:36 by ssukhija         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -22,7 +22,7 @@ CFILES = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c\
 	 ft_atoi.c ft_calloc.c ft_strdup.c ft_strjoin.c ft_strtrim.c\
 	 ft_itoa.c ft_split.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c\
 	 ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c ft_substr.c ft_atoi_base.c\
-	 ft_append.c ft_strcpy.c get_next_line.c\
+	 ft_append.c ft_strcpy.c ft_strcmp.c get_next_line.c\
 
 BSFILES = ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c
 
